# geochem-dataset

./: .coveragerc  .gitignore  .readthedocs.yaml  AUTHORS.md  LICENSE  LICENSE.txt  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: conf.py  index.rst
src/geochem_dataset/: __init__.py
src/geochem_dataset/cli/: __main__.py
src/geochem_dataset/cli/commands/: import_excel_datasets.py
src/geochem_dataset/excel/: dataclasses.py  dataset.py  errors.py  exceptions.py  interfaces.py  models.py  utils.py
src/geochem_dataset/excel/interfaces/: __init__.py  analysis_bulk.py  documents.py  samples.py  surveys.py
src/geochem_dataset/excel/interfaces/bases/: analysis.py  simple.py
src/geochem_dataset/sqlite/: __init__.py  database.py  exceptions.py  models.py
src/geochem_dataset/sqlite/interfaces/: __init__.py  bases.py
src/geochem_dataset/sqlite/models/: __init__.py
src/geochem_dataset/sqlite/serializers/: __init__.py  validators.py
src/geochem_dataset/tools/: __main__.py  config.py  gui.py  skeleton2.py
src/geochem_dataset/tools/actions/: __init__.py
src/geochem_dataset/tools/actions/dump_samples_to_csv/: __init__.py
src/geochem_dataset/tools/actions/print_stats/: __init__.py
src/geochem_dataset/tools/actions/validate/: __init__.py
src/geochem_dataset_excel/: __init__.py  dataclasses.py  exceptions.py
src/geochem_dataset_excel/interfaces/: analysis_bulk.py  surveys.py
tests/: conftest.py  test_analysis_bulk.py  test_constructor.py  test_documents.py  test_samples.py  test_surveys.py
tests/datasets/ca.cngo.test/: DOCUMENT.xlsx  SAMPLES.xlsx  SURVEYS.xlsx
tests/helpers/: utils.py
tests/test_excel/: conftest.py  fixture_dataset_excel_data.yaml  test_analysis_bulk.py  test_bulk.py  test_constructor.py  test_documents.py  test_samples.py  test_surveys.py
tests/test_excel/datasets/ca.cngo.test/: BULK.xlsx
tests/test_excel/helpers/: dataset_data.py  dataset_excel_data.py  utils.py
tests/test_excel/helpers/dataset_data/: __init__.py  workbook_data.py  worksheet_data.py
tests/test_sqlite/: conftest.py  init_db.sql  sample_data.py  test_constructor.py  test_datasets.py  test_documents.py  test_samples.py  test_subsamples.py  test_surveys.py
tests/test_tools/: no_test_skeleton.py  test_validate.py
tests/test_tools_not done/: no_test_skeleton.py  test_validate.py
