[metadata]
name = geochem-dataset
description = A package for managing geochemistry datasets.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
author = Canada-Nunavut Geoscience Office
author_email = cngo-bgcn@nrcan-rncan.gc.ca
url = https://github.com/cngo/geochem-dataset/
project_urls =
   Source = https://github.com/cngo/geochem-dataset/
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering


[options]
packages = find:
package_dir =
    =src
zip_zafe = False
include_package_data = True

# Require a min/specific Python version (comma-separated conditions)
python_requires = >=3.9

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    appdirs >=1.4
    openpyxl >=3.0
    pandas >=1.3
    pysimplegui >= 4.55


[options.packages.find]
where = src
exclude =
    tests


[options.extras_require]
testing =
    setuptools
    pytest
    pytest-cov


[options.entry_points]
console_scripts =
    geochem-dataset-tools = geochem_dataset.tools.__main__:main


[tool:pytest]
addopts =
    --cov geochem_dataset
    --cov-report term-missing
    --verbose
norecursedirs =
    .tox
    build
    dist
    tests/helpers
testpaths = tests
markers =
    slow: mark tests as slow (deselect with '-m "not slow"')
    system: mark end-to-end system tests


# [devpi:upload]
# # Options for the devpi: PyPI server and packaging tool
# # VCS export must be deactivated since we are using setuptools-scm
# no_vcs = 1
# formats = bdist_wheel


[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
