# setuptools - pyproject.toml support is in beta

[options]
packages = find:
package_dir =
    = src
include_package_data = True

[options.packages.find]
where = src
exclude =
    tests

# flake8 - does not support pyproject.toml yet

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
